--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,7 @@ LazyData: true
 Imports: raim
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
